[gd_scene load_steps=9 format=2]

[ext_resource path="res://script/ListLevel.gd" type="Script" id=1]
[ext_resource path="res://assets/freefantasygui/png/PanelInformation.png" type="Texture" id=2]
[ext_resource path="res://assets/Arcane Nine.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/freefantasygui/png/FondoBoton.png" type="Texture" id=4]
[ext_resource path="res://assets/BackgroundMenu.png" type="Texture" id=5]
[ext_resource path="res://assets/freefantasygui/png/Home.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=2]
size = 61
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 87
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="ListLevel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="Panel" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -463.0
margin_top = -366.0
margin_right = 1097.0
margin_bottom = 1144.0
rect_scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.0
margin_top = -347.0
margin_right = 101.0
margin_bottom = -277.0
custom_fonts/font = SubResource( 2 )
text = "Niveles"

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -201.0
margin_right = 616.0
margin_bottom = 15.0
rect_scale = Vector2( 0.64, 0.7 )
custom_constants/separation = 158

[node name="Level1" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_right = 372.0
margin_bottom = 216.0
icon = ExtResource( 4 )
flat = true

[node name="Label" type="Label" parent="VBoxContainer/Level1"]
margin_left = 168.75
margin_top = 54.2857
margin_right = 208.75
margin_bottom = 148.286
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="Level2" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_left = 530.0
margin_right = 902.0
margin_bottom = 216.0
icon = ExtResource( 4 )
flat = true

[node name="Label2" type="Label" parent="VBoxContainer/Level2"]
margin_left = 170.0
margin_top = 54.2857
margin_right = 210.0
margin_bottom = 148.286
custom_fonts/font = SubResource( 1 )
text = "2"

[node name="VBoxContainer2" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.0
margin_top = 3.0
margin_right = 250.0
margin_bottom = 219.0
rect_scale = Vector2( 0.64, 0.7 )
custom_constants/separation = 158

[node name="Level3" type="Button" parent="VBoxContainer2"]
pause_mode = 2
margin_right = 372.0
margin_bottom = 216.0
icon = ExtResource( 4 )
flat = true

[node name="Label" type="Label" parent="VBoxContainer2/Level3"]
margin_left = 168.75
margin_top = 54.2857
margin_right = 208.75
margin_bottom = 148.286
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="Container" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0001
margin_top = 247.0
margin_right = 135.0
margin_bottom = 435.841
rect_scale = Vector2( 0.68, 0.653 )

[node name="Return" type="Button" parent="Container"]
pause_mode = 2
margin_right = 188.0
margin_bottom = 188.0
icon = ExtResource( 6 )
flat = true

[connection signal="pressed" from="VBoxContainer/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="VBoxContainer2/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="Container/Return" to="." method="_on_Return_pressed"]
